// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should render as indented json 1`] = `
"[
  {
    \\"id\\": 85,
    \\"name\\": \\"Test n°85\\",
    \\"result\\": \\"success\\"
  },
  {
    \\"id\\": 128,
    \\"name\\": \\"Test n°128\\",
    \\"result\\": \\"failed\\"
  },
  {
    \\"id\\": 223,
    \\"name\\": \\"Test n°128\\"
  }
]
"
`;

exports[`List should render as json 1`] = `
"[{\\"id\\":85,\\"name\\":\\"Test n°85\\",\\"result\\":\\"success\\"},{\\"id\\":128,\\"name\\":\\"Test
n°128\\",\\"result\\":\\"failed\\"},{\\"id\\":223,\\"name\\":\\"Test n°128\\"}]
"
`;

exports[`List should render data in aligned column 1`] = `
"[1mId[22m   [1mResult[22m
85   success
128  failed
223  [90munset[39m"
`;

exports[`List should render without headers 1`] = `
"85   success
128  failed
223  [90munset[39m"
`;
